// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tour component renders correctly 1`] = `
<Tour
  dismissHelp={[MockFunction]}
  drawerOpen={false}
  helpSteps={
    Array [
      Object {
        "content": "Test 1",
        "target": ".test-1",
      },
      Object {
        "content": "Test 2",
        "target": ".test-2",
      },
      Object {
        "content": "Plugin link test",
        "target": "#plugin-link-test",
      },
    ]
  }
  loggedIn={false}
  showHelp={true}
  toggleDrawer={[MockFunction]}
/>
`;

exports[`Tour component renders correctly in dark mode 1`] = `
<Tour
  dismissHelp={[MockFunction]}
  drawerOpen={false}
  helpSteps={
    Array [
      Object {
        "content": "Test 1",
        "target": ".test-1",
      },
      Object {
        "content": "Test 2",
        "target": ".test-2",
      },
      Object {
        "content": "Plugin link test",
        "target": "#plugin-link-test",
      },
    ]
  }
  loggedIn={false}
  showHelp={false}
  toggleDrawer={[MockFunction]}
/>
`;
